# home-security-system

./: .clang-format  .gitignore  CMakeLists.txt  README.md  useful-commands.md
cfg/: example.config.json
env/: .example.env.sh
scripts/: build_deploy.sh  clean_up.sh  record_camera_and_sound.sh  requirements.sh  upload_stream_files.sh
src/assets/html/: login.html  stream.html
src/assets/static/css/: general.css  login.css  stream.css
src/cmd/: hash-password.cpp  main.cpp  record-audio.cpp  show-stream.cpp
src/include/: config.h  files.h  login.h  rate-limiter.h  stream.h
src/pkg/: config.cpp  files.cpp  login.cpp  rate-limiter.cpp  stream.cpp
src/scripts/: record_camera_and_sound.sh  send_ts_files.sh
